# local-ai-culling

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  config.yml  main.py  modify_html.py  modify_html_2.py  pyproject.toml  requirements.txt  run_dashboard.py
.agents/: AGENTS.md
analysis/: profiler.py
core/: cache.py  config.py  models.py  pipeline.py
docs/architecture/: Architecture.md  Scene_Intelligence.md
docs/phases/: Implementation_Plan.md  Walkthrough.md
docs/research/: Noise_Audit.md  Recovery_Score.md
docs/validation/: Validation_Report.md
modules/: blur.py  classification.py  composition.py  duplicates.py  editability.py  export.py  exposure.py  face_eye.py  feedback_server.py  ingestion.py  metadata.py  noise.py  preview.py  subject.py  visual_export.py
src/culler/ai/: blur.py  classification.py  composition.py  duplicates.py  editability.py  exposure.py  face_eye.py  noise.py  subject.py
src/culler/dashboard/: feedback_server.py
src/culler/engine/: cache.py  config.py  models.py  pipeline.py
src/culler/engine/analysis/: metadata.py  profiler.py
src/culler/engine/io/: export.py  ingestion.py  preview.py  visual_export.py
templates/: index.html
tests/: test_dashboard.py  test_imports.py
