[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-culling"
version = "1.0.0"
description = "Local AI-powered image culling with intelligent scoring and Burst detection"
authors = [
    {name = "Akash Ramsb"}
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "numpy",
    "Pillow>=10.2.0",
    "pandas>=2.1.4",
    "ultralytics>=8.1.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "mediapipe>=0.10.9",
    "pyyaml>=6.0.1",
    "rawpy>=0.23.2",
    "ImageHash>=4.3.1",
    "pydantic>=2.5.3",
    "exifread>=3.0.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1"
]
requires-python = ">=3.8"

[project.scripts]
culler = "culler.__main__:main"
